Nullable Over/Under Line in CrossingSpecs